--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,6 @@ body {
   margin-top: 100px;
 }
 
-.extra-margin-md {
-  margin-top: 50px;
-}
-
 .card {
   padding: 15px;
   margin: 20px;
@@ -40,6 +36,9 @@ div[class="col-md-7"]>p {
   color: rgba(255, 255, 255, 0.7);
   padding-top: 50px;
   text-align: center;
+}
+form button {
+  width: 100%;
 }
 
 footer {
